skills without final getters