@@ -1664,10 +1664,10 @@ public final class Config {
         ALLOW_SOUL_SPIRIT_SHOT_INFINITELY = itemsProperties.getProperty("AllowSoulSpiritShotInfinitely", false);
         ALLOW_ARROW_INFINITELY = itemsProperties.getProperty("AllowArrowInfinitely", false);
         ALLOW_START_ITEMS = itemsProperties.getProperty("AllowStartItems", false);
-        START_ITEMS_MAGE = itemsProperties.getProperty("StartItemsMageIds", Collections.singletonList(57));
-        START_ITEMS_MAGE_COUNT = itemsProperties.getProperty("StartItemsMageCount", Collections.singletonList(1));
-        START_ITEMS_FITHER = itemsProperties.getProperty("StartItemsFigtherIds", Collections.singletonList(57));
-        START_ITEMS_FITHER_COUNT = itemsProperties.getProperty("StartItemsFigtherCount", Collections.singletonList(1));
+        START_ITEMS_MAGE = itemsProperties.getProperty("StartItemsMageIds", List.of(57));
+        START_ITEMS_MAGE_COUNT = itemsProperties.getProperty("StartItemsMageCount", List.of(1));
+        START_ITEMS_FITHER = itemsProperties.getProperty("StartItemsFigtherIds", List.of(57));
+        START_ITEMS_FITHER_COUNT = itemsProperties.getProperty("StartItemsFigtherCount", List.of(1));
     }
 
 
@@ -2006,9 +2006,9 @@ public final class Config {
 
 
         SERVICES_HERO_SELL_ENABLED = servicesSettings.getProperty("HeroSellEnabled", false);
-        SERVICES_HERO_SELL_DAY = servicesSettings.getProperty("HeroSellDay", Collections.singletonList(30));
-        SERVICES_HERO_SELL_PRICE = servicesSettings.getProperty("HeroSellPrice", Collections.singletonList(30));
-        SERVICES_HERO_SELL_ITEM = servicesSettings.getProperty("HeroSellItem", Collections.singletonList(4037));
+        SERVICES_HERO_SELL_DAY = servicesSettings.getProperty("HeroSellDay", List.of(30));
+        SERVICES_HERO_SELL_PRICE = servicesSettings.getProperty("HeroSellPrice", List.of(30));
+        SERVICES_HERO_SELL_ITEM = servicesSettings.getProperty("HeroSellItem", List.of(4037));
         SERVICES_HERO_SELL_CHAT = servicesSettings.getProperty("HeroChat", false);
         SERVICES_HERO_SELL_SKILL = servicesSettings.getProperty("HeroSkills", false);
         SERVICES_HERO_SELL_ITEMS = servicesSettings.getProperty("HeroItems", false);
@@ -2301,10 +2301,10 @@ public final class Config {
         CDItemsAllowMinMaxPlayerLvl = eventSettings.getProperty("CDItemsAllowMinMaxPlayerLvl", false);
         CDItemsAllowMinMaxMobLvl = eventSettings.getProperty("CDItemsAllowMinMaxMobLvl", false);
         CDItemsAllowOnlyRbDrops = eventSettings.getProperty("CDItemsAllowOnlyRbDrops", false);
-        CDItemsId = eventSettings.getProperty("CDItemsId", Collections.singletonList(57));
-        CDItemsCountDropMin = eventSettings.getProperty("CDItemsCountDropMin", Collections.singletonList(1));
-        CDItemsCountDropMax = eventSettings.getProperty("CDItemsCountDropMax", Collections.singletonList(1));
-        CustomDropItemsChance = eventSettings.getProperty("CustomDropItemsChance", Collections.singletonList(1));
+        CDItemsId = eventSettings.getProperty("CDItemsId", List.of(57));
+        CDItemsCountDropMin = eventSettings.getProperty("CDItemsCountDropMin", List.of(1));
+        CDItemsCountDropMax = eventSettings.getProperty("CDItemsCountDropMax", List.of(1));
+        CustomDropItemsChance = eventSettings.getProperty("CustomDropItemsChance", List.of(1));
         CDItemsMinPlayerLvl = eventSettings.getProperty("CDItemsMinPlayerLvl", 20);
         CDItemsMaxPlayerLvl = eventSettings.getProperty("CDItemsMaxPlayerLvl", 85);
         CDItemsMinMobLvl = eventSettings.getProperty("CDItemsMinMobLvl", 20);
@@ -2415,19 +2415,19 @@ public final class Config {
         BBS_FORGE_FOUNDATION_PRICE_ARMOR = forge.getProperty("FoundationPriceArmor", List.of(1, 1, 1, 1, 1, 2, 5, 10));
         BBS_FORGE_FOUNDATION_PRICE_WEAPON = forge.getProperty("FoundationPriceWeapon", List.of(1, 1, 1, 1, 1, 2, 5, 10));
         BBS_FORGE_FOUNDATION_PRICE_JEWEL = forge.getProperty("FoundationPriceJewel", List.of(1, 1, 1, 1, 1, 2, 5, 10));
-        BBS_FORGE_ENCHANT_MAX = forge.getProperty("MaxEnchant", Collections.singletonList(25));
-        BBS_FORGE_WEAPON_ENCHANT_LVL = forge.getProperty("WValue", Collections.singletonList(5));
-        BBS_FORGE_ARMOR_ENCHANT_LVL = forge.getProperty("AValue", Collections.singletonList(5));
-        BBS_FORGE_JEWELS_ENCHANT_LVL = forge.getProperty("JValue", Collections.singletonList(5));
-        BBS_FORGE_ENCHANT_PRICE_WEAPON = forge.getProperty("WPrice", Collections.singletonList(5));
-        BBS_FORGE_ENCHANT_PRICE_ARMOR = forge.getProperty("APrice", Collections.singletonList(5));
-        BBS_FORGE_ENCHANT_PRICE_JEWELS = forge.getProperty("JPrice", Collections.singletonList(5));
+        BBS_FORGE_ENCHANT_MAX = forge.getProperty("MaxEnchant", List.of(25));
+        BBS_FORGE_WEAPON_ENCHANT_LVL = forge.getProperty("WValue", List.of(5));
+        BBS_FORGE_ARMOR_ENCHANT_LVL = forge.getProperty("AValue", List.of(5));
+        BBS_FORGE_JEWELS_ENCHANT_LVL = forge.getProperty("JValue", List.of(5));
+        BBS_FORGE_ENCHANT_PRICE_WEAPON = forge.getProperty("WPrice", List.of(5));
+        BBS_FORGE_ENCHANT_PRICE_ARMOR = forge.getProperty("APrice", List.of(5));
+        BBS_FORGE_ENCHANT_PRICE_JEWELS = forge.getProperty("JPrice", List.of(5));
 
 
-        BBS_FORGE_ATRIBUTE_LVL_WEAPON = forge.getProperty("AtributeWeaponValue", Collections.singletonList(25));
-        BBS_FORGE_ATRIBUTE_PRICE_WEAPON = forge.getProperty("PriceForAtributeWeapon", Collections.singletonList(25));
-        BBS_FORGE_ATRIBUTE_LVL_ARMOR = forge.getProperty("AtributeArmorValue", Collections.singletonList(25));
-        BBS_FORGE_ATRIBUTE_PRICE_ARMOR = forge.getProperty("PriceForAtributeArmor", Collections.singletonList(25));
+        BBS_FORGE_ATRIBUTE_LVL_WEAPON = forge.getProperty("AtributeWeaponValue", List.of(25));
+        BBS_FORGE_ATRIBUTE_PRICE_WEAPON = forge.getProperty("PriceForAtributeWeapon", List.of(25));
+        BBS_FORGE_ATRIBUTE_LVL_ARMOR = forge.getProperty("AtributeArmorValue", List.of(25));
+        BBS_FORGE_ATRIBUTE_PRICE_ARMOR = forge.getProperty("PriceForAtributeArmor", List.of(25));
         BBS_FORGE_WEAPON_ATTRIBUTE_MAX = forge.getProperty("MaxWAttribute", 25);
         BBS_FORGE_ARMOR_ATTRIBUTE_MAX = forge.getProperty("MaxAAttribute", 25);
     }
